--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="panel panel-primary">
 
         <div class="panel-body">
-            <form>
+            <form class="form-inline">
                 <div class="form-group">
                     <label for="limitInput">Limit</label>
                     <input type="number" class="form-control" id="limitInput" placeholder="Limit">
@@ -28,18 +28,18 @@
     </div>
 
 
-            <div class="list-group">
-                <a *ngFor="let trace of traces" class="list-group-item" href="*">
-                    <h4 class="list-group-item-heading">{{trace[0].annotations[0].endpoint.serviceName}}</h4>
-                    <p class="list-group-item-text">
-                        {{trace[0].duration}}
+    <div class="list-group">
+        <a *ngFor="let trace of traces" class="list-group-item" href="*">
+            <h4 class="list-group-item-heading">{{trace[0].annotations[0].endpoint.serviceName}}</h4>
+            <p class="list-group-item-text">
+                {{trace[0].duration}}
 
-                        <span class="label label-primary">Spans {{trace.length}}</span>
-                        <span *ngFor="let span of trace" class="label label-default">
+                <span class="label label-primary">Spans {{trace.length}}</span>
+                <span *ngFor="let span of trace" class="label label-default">
                 {{span.annotations[1].endpoint.serviceName}}
             </span>
-                    </p>
-                </a>
-            </div>
+            </p>
+        </a>
+    </div>
 
 </div>
