--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,41 +2,63 @@
     <div class="panel panel-primary">
 
         <div class="panel-body">
-            <form class="form-inline">
-                <div class="form-group form-group-sm">
-                    <label for="limitInput">Limit</label>
-                    <input type="number" class="form-control" id="limitInput" placeholder="Limit" [value]="limit">
-                </div>
-                <div class="form-group form-group-sm">
-                    <label for="startDateInput">Start time</label>
-                    <input type="date" class="form-control" id="startDateInput" [value]="formatDate(startDate)">
-                </div>
+            <form class="form-horizontal">
+                <div class="form-group  form-group-sm">
+                    <label for="timeSelection" class="col-sm-2 control-label">Time span</label>
+                    <div class="col-sm-2">
+                        <select class="form-control" id="timeSelection">
+                        <option value="15">15 minutes</option>
+                        <option value="30">30 minutes</option>
+                        <option value="60">1 hour</option>
+                        <option value="120">2 hours</option>
+                        <option value="480">8 hours</option>
+                        <option value="720">12 hours</option>
+                        <option value="1440">1 day</option>
+                        <option value="custom">User defined</option>
+                    </select>
+                    </div>
+                    <label for="durationInput" class="col-sm-2 control-label">Duration</label>
+                    <div class="col-sm-2">
+                        <div class="input-group ">
+                            <div class="input-group-addon">>=</div>
+                            <input type="number" class="form-control" id="durationInput" placeholder="" [value]="minDuration">
+                            <div class="input-group-addon">μs</div>
+                        </div>
+                    </div>
 
-                <div class="form-group form-group-sm">
-                    <label for="startTimeInput"></label>
-                    <input type="time" class="form-control" id="startTimeInput">
-                </div>
-
-                <div class="form-group form-group-sm">
-                    <label for="endDateInput">End time</label>
-                    <input type="date" class="form-control" id="endDateInput" [value]="formatDate(endDate)">
-                </div>
-
-                <div class="form-group form-group-sm">
-                    <label for="endTimeInput"></label>
-                    <input type="time" class="form-control" id="endTimeInput">
-                </div>
-
-                <div class="form-group form-group-sm">
-                    <label for="durationInput">Duration</label>
-                    <div class="input-group">
-                        <div class="input-group-addon">>=</div>
-                        <input type="number" class="form-control" id="durationInput" placeholder="" [value]="minDuration">
-                        <div class="input-group-addon">μs</div>
+                    <label for="limitSelect" class="col-sm-2 control-label">Limit</label>
+                    <div class="col-sm-2">
+                        <select class="form-control" id="limitSelect">
+                        <option value="10">10</option>
+                        <option value="50">50</option>
+                        <option value="100">100</option>
+                        </select>
                     </div>
                 </div>
 
-                <button type="submit" class="btn btn-primary">Find traces</button>
+                <div class="form-group form-group-sm">
+                    <label for="startDateInput" class="col-sm-2 control-label">Start time</label>
+                    <div class="col-sm-2">
+                        <input type="date" class="form-control" id="startDateInput" [value]="formatDate(startDate)">
+                    </div>
+
+                    <div class="col-sm-2">
+                        <input type="time" class="form-control" id="startTimeInput" [value]="formatTime(startDate)">
+                    </div>
+                </div>
+
+                <div class="form-group form-group-sm">
+                    <label for="endDateInput" class="col-sm-2 control-label">End time</label>
+                    <div class="col-sm-2">
+                        <input type="date" class="form-control" id="endDateInput" [value]="formatDate(endDate)">
+                    </div>
+
+                    <div class="col-sm-2">
+                        <input type="time" class="form-control" id="endTimeInput" [value]="formatTime(endDate)">
+                    </div>
+                </div>
+
+                <button type="submit" class="btn btn-primary btn-sm" (click)="find()">Find traces</button>
             </form>
         </div>
     </div>
@@ -44,7 +66,7 @@
 
     <div class="list-group">
         <a *ngFor="let trace of traces" class="list-group-item" href="*">
-            <h4 class="list-group-item-heading">{{trace[0].annotations[0].endpoint.serviceName}}</h4>
+            <h4 class="list-group-item-heading">{{formatTraceName(trace)}}</h4>
             <p class="list-group-item-text">
                 <span class="label label-primary">{{formatTraceTimestamp(trace)}}</span>
                 <span class="label label-primary">{{formatTraceDuration(trace)}}</span>
