--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <div id="navbar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="#">
             Zipkin<span class="muted" style="font-size: .75em; padding-left: 10px;">Investigate system behavior</span>
           </a>
         </div>
         <div class="navbar-left">
             <ul class="nav navbar-nav">
-                <li data-route="index" class="active"><a href="/">Find a trace</a></li>
-                <li data-route="dependency"><a href="/dependency">Dependencies</a></li>
+                <li data-route="index" class="active"><a href="#">Find a trace</a></li>
+                <li data-route="dependency"><a href="#/dependencies">Dependencies</a></li>
             </ul>
         </div>
         <div class="navbar-right" style="width: 50%">
