--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
                     <label for="serviceSelect" class="col-sm-2 control-label">Service</label>
                     <div class="col-sm-5">
                         <select class="form-control" #serviceSelect>
-                        <option *ngFor="#o of zipkin.services" [value]="o">{{o}}</option>
+                        <option *ngFor="let o of zipkin.services" [value]="o">{{o}}</option>
                         </select>
                     </div>
                 </div>
@@ -45,7 +45,7 @@
                         <option value="100">100 traces</option>
                         </select>
                     </div>
-                    <button type="submit" class="btn btn-primary btn-sm" (click)="find(timeSelection.value, durationInput.value , limitSelect.value, startDateInput.value, startTimeInput.value, endDateInput.value, endTimeInput.value)">Find traces</button>
+                    <button type="submit" class="btn btn-primary btn-sm" (click)="find(serviceSelect.value, timeSelection.value, durationInput.value , limitSelect.value, startDateInput.value, startTimeInput.value, endDateInput.value, endTimeInput.value)">Find traces</button>
                 </div>
                 <div [hidden]="!customTime">
                     <div class="form-group form-group-sm">
