--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -80,7 +80,7 @@
             <div >
                 <span class="col-sm-4">
                         <button class="btn btn-default btn-sm" style="padding-left:8px;padding-right:8px;padding-top:2px;padding-bottom:2px;" (click)=toggleTrace(trace)>{{expandedText(trace)}}</button>
-                        {{formatTraceName(trace)}} - {{formatTraceId(trace)}}
+                        <b>{{formatTraceName(trace)}} - {{formatTraceId(trace)}}</b>
                 </span>
                 <span class="label label-primary">{{formatTraceTimestamp(trace)}}</span>
                 <span class="label label-primary">{{formatTraceDuration(trace)}}</span>
@@ -88,7 +88,7 @@
                 <span class="label label-primary">{{trace.length}} spans</span>
                 <span *ngFor="let span of trace"><span class="label label-success">{{span.annotations[1].endpoint.serviceName}}</span>        </span>
             </div>
-            <div [hidden]="!trace[0].expanded" >
+            <div [hidden]="!trace[0].expanded" style="padding-top:12px;">
                 <!-- GANTT GOES HERE -->
                 <tracechart [trace]="trace"></tracechart>
             </div>
