--- a/src/app/tracechart/tracechart.component.html
+++ b/src/app/tracechart/tracechart.component.html
@@ -1,17 +1,39 @@
 <div>
-    <table class="table table-striped table-condensed table-borderless" style="border:0px;">
+    <table class="table table-condensed table-borderless" style="border:0px;">
         <tr>
-            <th class="col-md-2">Service</th>
-            <th class="col-md-10">Timeline</th>
+            <th class="col-md-1">Service</th>
+            <th class="col-md-11">Timeline</th>
         </tr>
         <tr>
             <td></td>
-            <td>0</td>
+            <td>
+                <div class="span">
+                    <div class="timeline timeline1"></div>
+                    <div class="timeline timeline2"></div>
+                    <div class="timeline timeline3"></div>
+                    <div class="timeline timeline4"></div>
+                    <div class="timeline timeline5"></div>
+                    <div class="timeline timeline6"></div>
+                </div>
+            </td>
         </tr>
-        <tr *ngFor="let span of trace" >
+        <tr *ngFor="let span of trace">
             <td>{{formatServiceName(span)}}</td>
             <td>
-                <div style="width:100px;" class="waiting"></div><div style="width:100px;" class="server"></div><div style="width:50%;" class="waiting"></div>
+
+
+                <div class="span">
+
+                    <div [style.left]="getCs1(span)+'%'" [style.width]="getCs2(span)+'%'" class="waiting-left"></div>
+                    <div [style.left]="getSr(span)+'%'" [style.width]="getSs(span)+'%'" class="server">{{formatSpanInfo(span)}}</div>
+                    <div [style.left]="getCr1(span)+'%'" [style.width]="getCr2(span)+'%'" class="waiting-right"></div>
+                    <div class="timeline timeline1"></div>
+                    <div class="timeline timeline2"></div>
+                    <div class="timeline timeline3"></div>
+                    <div class="timeline timeline4"></div>
+                    <div class="timeline timeline5"></div>
+                    <div class="timeline timeline6"></div>
+                </div>
             </td>
         </tr>
     </table>
