--- a/src/app/tracechart/tracechart.component.html
+++ b/src/app/tracechart/tracechart.component.html
@@ -1,5 +1,5 @@
 <div>
-    <table class="table table-condensed table-borderless" style="border:0px;">
+    <table class="table table-condensed table-striped table-borderless" style="border:0px;">
         <tr>
             <th class="col-md-1">Service</th>
             <th class="col-md-11">Timeline</th>
