--- a/src/app/tracechart/tracechart.component.html
+++ b/src/app/tracechart/tracechart.component.html
@@ -1,5 +1,5 @@
 <div>
-    <table class="table table-condensed table-striped table-borderless" style="border:0px;">
+    <table class="table table-striped table-borderless" style="border:0px;">
         <tr>
             <th class="col-md-1">Service</th>
             <th class="col-md-11">Timeline</th>
@@ -25,14 +25,16 @@
                 <div class="span">
 
                     <div [style.left]="getCs1(span)+'%'" [style.width]="getCs2(span)+'%'" class="waiting-left"></div>
-                    <div [style.left]="getSr(span)+'%'" [style.width]="getSs(span)+'%'" class="server">{{formatSpanInfo(span)}}</div>
                     <div [style.left]="getCr1(span)+'%'" [style.width]="getCr2(span)+'%'" class="waiting-right"></div>
+                    <div [style.left]="getSr(span)+'%'" [style.width]="getSs(span)+'%'" class="server">{{formatSpanInfo(span)}}</div>
+
                     <div class="timeline timeline1"></div>
                     <div class="timeline timeline2"></div>
                     <div class="timeline timeline3"></div>
                     <div class="timeline timeline4"></div>
                     <div class="timeline timeline5"></div>
                     <div class="timeline timeline6"></div>
+                    <div *ngFor="let annotation of getUserAnnotations(span)" [style.left]="getAnnotation(annotation)+'%'" class="annotation" ></div>
                 </div>
             </td>
         </tr>
