--- a/src/app/tracechart/tracechart.component.html
+++ b/src/app/tracechart/tracechart.component.html
@@ -17,7 +17,7 @@
                 </div>
             </td>
         </tr>
-        <tr *ngFor="let span of trace">
+        <tr *ngFor="let span of trace.spans">
             <td>{{formatServiceName(span)}}</td>
             <td>
 
