--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -79,13 +79,13 @@
         <span *ngFor="let trace of zipkin.traces" class="list-group-item">
             <div >
                 <span class="col-sm-4">
-                        <button class="btn btn-default btn-sm btn-expander" style="padding-left:8px;padding-right:8px;padding-top:2px;padding-bottom:2px;" (click)=toggleTrace(trace)>{{expandedText(trace)}}</button>
-                        <b>{{formatTraceName(trace)}} - {{formatTraceId(trace)}}</b>
+                        <button class="btn btn-default btn-sm btn-expander" style="padding-left:8px;padding-right:8px;padding-top:2px;padding-bottom:2px;" (click)=trace.toggleTrace()>{{trace.expandedText()}}</button>
+                        <b>{{trace.name}} - {{trace.id}}</b>
                 </span>
-                <span class="col-sm-2">{{formatTraceTimestamp(trace)}}</span>
-                <span class="col-sm-2">{{formatTraceDuration(trace)}}</span>
+                <span class="col-sm-2">{{trace.formatTimestamp()}}</span>
+                <span class="col-sm-2">{{trace.formatDuration()}}</span>
 
-                <span class="label label-default">{{trace.length}} spans</span>
+                <span class="label label-default">{{trace.spans.length}} spans</span>
 
             </div>
             <div [hidden]="!trace.expanded" style="padding-top:12px;">
