--- a/src/styles.css
+++ b/src/styles.css
@@ -9,26 +9,33 @@
 
 .waiting-left, .waiting-right {
     height:17px;
-    background-color:#90f0a0;
+    background-color:#ededed;
     position: absolute;
 }
 
 .waiting-left {
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
+    border-left: 1px solid lightgray;
+    border-top: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
 }
 .waiting-right {
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
+    border-right: 1px solid lightgray;
+    border-top: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
 }
 
 .server {
     height:17px;
     padding-left: 10px;
-    background-color:#80d0ff;
+    background-color:#caebff;
     position: absolute;
     overflow: visible;
     white-space: nowrap;
+    border: 1px solid lightblue;
 }
 
 .table-borderless tbody tr td, .table-borderless tbody tr th, .table-borderless thead tr th {
@@ -39,7 +46,7 @@
 }
 
 .timeline {
-    border-left: 1px solid rgba(0, 0, 0, 0.2);
+    border-left: 1px solid rgba(0, 0, 0, 0.1);
     height: 20px;
     width: 20%;
     position: absolute;
