--- a/src/styles.css
+++ b/src/styles.css
@@ -16,16 +16,16 @@
 .waiting-left {
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
-    border-left: 1px solid lightgray;
+    /*border-left: 1px solid lightgray;
     border-top: 1px solid lightgray;
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;*/
 }
 .waiting-right {
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
-    border-right: 1px solid lightgray;
+    /*border-right: 1px solid lightgray;
     border-top: 1px solid lightgray;
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;*/
 }
 
 .server {
@@ -36,6 +36,14 @@
     overflow: visible;
     white-space: nowrap;
     border: 1px solid lightblue;
+}
+
+tr:hover .waiting-left, tr:hover .waiting-right {
+    background-color: #e8e8e8;
+}
+
+tr:hover .server {
+    background-color:#b6e0f9;
 }
 
 .table-borderless tbody tr td, .table-borderless tbody tr th, .table-borderless thead tr th {
