--- a/src/styles.css
+++ b/src/styles.css
@@ -17,9 +17,7 @@
 .waiting-left {
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
-    /*border-left: 1px solid lightgray;
-    border-top: 1px solid lightgray;
-    border-bottom: 1px solid lightgray;*/
+
 }
 .waiting-right {
     border-top-right-radius: 4px;
@@ -46,6 +44,19 @@ tr:hover .waiting-left, tr:hover .waiting-right {
 
 tr:hover .server {
     background-color:#b6e0f9;
+}
+
+.waiting-left:hover, .waiting-right:hover {
+    border: 1px solid dimgray;
+}
+
+tr:hover .server {
+    background-color:#b6e0f9;
+}
+
+.server:hover {
+    background-color:#b6e0f9;
+    border: 1px solid dodgerblue;
 }
 
 .table-borderless tbody tr td, .table-borderless tbody tr th, .table-borderless thead tr th {
